    - Es wurde eine Wartezeit für Hyper-Backup Aufgaben im auszuführenden Shell-Script hinzugefügt. Damit die Änderungen wirksam werden, muss der Script Code erneut an das auszuführende Shell-Script übergeben werden. Thanks @luddinho
    - Shell Scripte wurden beim Anstecken eines externen Datenträgers auch dann ausgeführt, wenn AutoPilot im Paketzentrum gestoppt wurde. Fehler wurde behoben.

 -English
    - Function for converting bytes into a human-readable format added. Thanks @luddinho
    - Function for evaluating the disk size added. Thanks @luddinho
    - Added a wait time for hyper-backup tasks in the shell script to be executed. For the changes to take effect, the script code must be passed again to the shell script to be executed. Thanks @luddinho
    - Shell scripts were executed when an external data carrier was plugged in, even if AutoPilot was stopped in the package center. Bug has been fixed.


Version 1.1-200 vom 13.01.2024

 -Deutsch
    - Anzeigefehler unter Verwendung der englischen Sprache behoben.
    - Unter dem Punkt Speicherplatznutzung wurde die Abkürzung für Terrabyte nur als "T" und nicht als „TB“ ausgegeben. Fehler wurde behoben.
    - Wurde eine Hyper Backup Aufgabe so konfiguriert, dass der externe Datenträger nach erfolgreicher Sicherung ausgeworfen werden soll, konnte AutoPilot im Anschluss keine korrekten Angaben zur Speicherplatznutzung mehr ins Protokoll aufnehmen. Fehler wurde behoben. Danke an luddinho - GitHub Issue #12
    - In einigen seltenen Situationen konnte es vorkommen, dass die ausgelöste Hyper Backup Aufgabe stecken blieb, wenn diese direkt nach dem Einhängen eines externen Datenträgers durch AutoPilot ausgelöst wurde und das Ziel noch nicht bereit war. Fehler wurde behoben. Danke an luddinho - GitHub Issue #13

 -English
    - Fixed display error when using English language.
    - Under the point storage space usage the abbreviation for terabyte was only shown as “T” and not as “TB”. Bug has been fixed.