@@ -124,6 +124,9 @@ txt_autopilot_filesystem="Filesystem"
 txt_autopilot_scriptfile="Shell script"
 txt_autopilot_scriptfile_path="Directory"
 txt_autopilot_scriptfile_name="Filename"
+txt_autopilot_scriptfile_error="<span class=\"text-danger\">A problem has occurred!</span>"
+txt_autopilot_scriptfile_errormsg1="The path or name of the script file "
+txt_autopilot_scriptfile_errormsg2=" could not be found."
 
 txt_autopilot_connect="After connecting an external disk, automatically execute the linked shell script file"
 txt_autopilot_disconnect="After executing the linked shell script file, remove the external disk..."
@@ -212,5 +215,6 @@ txt_help_setup_step_2="From the second line onwards, individual shell script ins
 txt_help_setup_step_3="After the shell script instruction has been executed, a so-called exit code is usually passed to the system, the numerical value of which is given via a"
 txt_help_setup_step_4="can be read. If the result is 0, the last executed shell script instruction was executed without errors. In this case, AutoPilot would automatically eject the external disk. However, if you get a numerical value between 1 and 255, this indicates a note, a warning, an error or an abort of the last executed shell script statement. In this case, the external storage medium would not be automatically ejected by AutoPilot. This basic behavior can be individually adjusted in the AutoPilot settings. Alternatively, instead of the exit code passed by the system, this can also be done an own and thus permanently set exit code can be passed to AutoPilot, whereby a "
 txt_help_setup_step_5="AutoPilot informs that, regardless of the exit code actually passed, the external disk is always ejected. Below is the complete example script."
+
 
 
