@@ -90,7 +90,7 @@ txt_udev_status_false="Der für ${app_name} benötigte UDEV-Gerätetreiber zur E
 # --------------------------------------------------------------
 txt_label_logfile="Protokoll"
 txt_link_usbautopilot="AutoPilot"
-txt_autopilot_script_detected="Shell-Scriptd erkannt"
+txt_autopilot_script_detected="Shell-Script erkannt"
 txt_autopilot_script_delete="Die Verbindung zwischen diesen Datenträger, AutoPilot und dem Shell-Script lösen"
 txt_autopilot_script_create="Diesen Datenträger mit AutoPilot und einem Shell-Script verbinden"
 txt_autopilot_script_view="Inhalt des Shell-Scripts anzeigen, das mit diesem Datenträger verbundenen ist"
@@ -124,6 +124,9 @@ txt_autopilot_filesystem="Dateisystem"
 txt_autopilot_scriptfile="Shell-Script"
 txt_autopilot_scriptfile_path="Verzeichnis"
 txt_autopilot_scriptfile_name="Dateiname"
+txt_autopilot_scriptfile_error="<span class=\"text-danger\">Ein Problem ist aufgetreten!</span>"
+txt_autopilot_scriptfile_errormsg1="Der Pfad bzw. der Name der Scriptdatei "
+txt_autopilot_scriptfile_errormsg2=" konnte nicht gefunden werden."
 
 txt_autopilot_connect="Nach dem anschließen eines externen Datenträgers die verknüpfte Shell-Scriptdatei automatisch ausführen"
 txt_autopilot_disconnect="Nach der Ausführung der verknüpften Shell-Scriptdatei den externen Datenträger..."
@@ -212,4 +215,5 @@ txt_help_setup_step_2="Ab der zweiten Zeile folgen individuelle Shellscript Anwe
 txt_help_setup_step_3="Nachdem die Shellscript Anweisung ausgeführt wurde, wird in der Regel ein sogenannter Exit-Code an das System übergeben, dessen Zahlenwert über ein"
 txt_help_setup_step_4="ausgelesen werden kann. Ist das Ergebnis 0, wurde die zuletzt ausgeführte Shellscript Anweisung fehlerfrei ausgeführt. AutoPilot würde in diesem Fall den externen Datenträger automatisch auszuwerfen. Erhält man hingegen einen Zahlenwert zwischen 1 und 255 deutet dies auf einen Hinweis, eine Warnung, einen Fehler oder einen Abbruch der zuletzt ausgeführten Shellscript Anweisung hin. In diesem Fall würde der externe Datenträger von AutoPilot nicht automatisch ausgeworfen. Dieses grundlegende Verhalten kann in den AutoPilot Einstellungen individuell angepasst werden. Alternativ dazu kann anstelle des vom System übergebenen Exit-Code, auch ein eigener und damit fest eingestellter Exit-Code an AutoPilot übergeben werden, wobei ein"
 txt_help_setup_step_5="AutoPilot mitteilt, das unabhängig vom tatsächlich übergebenen Exit-Code, der externe Datenträger immer ausgeworfen wird. Nachfolgend nochmal das komplette Beispiel-Script."
+
 
